fix horizontal scrolling and remove unnecessary libs

--- a/css/main.css
+++ b/css/main.css
@@ -1327,7 +1327,8 @@ header .logo a {
 	text-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 canvas {
-	opacity: 0.8;
+	/*opacity: 0.8;*/
+	width: 100%;
 }
 .intro-content .header-introduction {
 	position: absolute;
